--- a/templates/host.html
+++ b/templates/host.html
@@ -11,12 +11,13 @@
 
     <div class="home1">
         <div class="home2">
-                <a href="{{url_for('quiz.quiz_list_all')}}">クイズ一覧</a><br>
-                <a href="{{url_for('quiz.quiz_register')}}">クイズ登録</a><br>
-                <a href="{{url_for('quiz.quiz_search_all')}}">クイズ検索</a><br>
-                <a href="{{url_for('user.user_list')}}">ユーザー一覧</a><br>
+                <a class="home3" href="{{url_for('quiz.quiz_list_all')}}">クイズ一覧</a><br>
+                <a class="home3" href="{{url_for('quiz.quiz_register')}}">クイズ登録</a><br>
+                <a class="home3" href="{{url_for('quiz.quiz_search_all')}}">クイズ検索</a><br>
+                <a class="home3" href="{{url_for('quiz.quiz_delete')}}">クイズ削除</a><br>
+                <a class="home3" href="{{url_for('user.user_list')}}">ユーザー一覧</a><br>
     </div>
-    <a href="{{url_for('logout')}}">ログアウト</a>
+    <a href="{{url_for('logout')}}" class="logout">ログアウト</a>
     </div>    
 </body>
 </html>
