--- a/templates/quiz/quiz_delete.html
+++ b/templates/quiz/quiz_delete.html
@@ -3,9 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel = "stylesheet" href = "{{url_for('static',filename = 'css/quiz_delete.css')}}">
+
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>クイズ削除</h1>
+    <h2>削除したいクイズのIDを入力してください</h2>
+
+    <div class="home1">
+        <div class="home2">
+            <form action="{{url_for('quiz.quiz_delete_result')}}" method="post">
+                <input type="text" name="id" class="input" > <br>
+
+                <button type="submit" class="button">削除</button>
+            </form>
+        </div>
+        <a href="{{url_for('host_top')}}">トップへ</a>
+    </div>
 </body>
 </html>
